--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ Appreciation for [Andy](https://www.ucl.ac.uk/bartlett/casa/people/dr-andrew-mac
 
 ## About me
 
-Hi! there. I am Yinhao Zhan from Shenzhen, China. I have an undergraduate degree in urban planning and have worked as a planner for a leading urban design institute[Urban Planning & Design Institute of Shenzhen](https://www.upr.cn/) for several years.I have a passion for geo data science, urban analysis, planning policys or practice and all things about cities.
+Hi! there. I am Yinhao Zhan from Shenzhen, China. I have an undergraduate degree in urban planning and have worked as a urban planner for a leading urban design institute[Urban Planning & Design Institute of Shenzhen](https://www.upr.cn/) for several years.I have a passion for geo data science, urban analysis, planning policys or practice and all things about cities.
 
 Chiefly taking charge of regulatory planning and urban design during my work experience. However, it is insufficient for me to realize my career aspirations to work in a top urban design institution, engaging in smart city construction to  optimize urban governance means and create sustainable and people-oriented cities through quantitative analysis. 
 
