--- a/2+Portfolio+tools.qmd
+++ b/2+Portfolio+tools.qmd
@@ -11,5 +11,10 @@ editor: visual
 
 
 ## Summary
-This week we learnt about Xaringan and Quarto, both of which can be based on the R language, for tasks such as note management, slideshow creation......
+This week we learnt about [Xaringan](https://github.com/yihui/xaringan) and [Quarto](https://quarto.org/), both of which can be based on the R language, for tasks such as note management, slideshow creation......
 
+## Application
+One of this week's tasks was to create a slide presentation on remote sensing sensors using Xaringan.
+
+## Reflection
+Quarto is seen as the next generation of R markdown, based on other powerful features and has been growing in popularity since its release last year. quarto's beautiful blog and website examples are impressive. However, as an Obsidian user, I am deeply involved in Obsidian's rich and easy-to-use plugins and learning about Xaringan and Quarto has been an interesting experience for me!
