--- a/2+Portfolio+tools.qmd
+++ b/2+Portfolio+tools.qmd
@@ -14,7 +14,13 @@ This week we learnt about [Xaringan](https://github.com/yihui/xaringan) [Gallery
 
 ## Application
 
-One of this week's tasks was to create a slide presentation on remote sensing sensors using Xaringan.
+One of this week's tasks was to create a slide presentation about remote sensing sensors using Xaringan.
+[My slides](https://murphy829.github.io/WeekSlides/#1).
+
+
+```{r embed-xaringan, echo=FALSE}
+xaringanExtra::embed_xaringan(url = "https://github.com/Murphy829/WeekSlides/blob/main/index.html", ratio = "4:3")
+```
 
 ## Reflection
 
