--- a/2+Portfolio+tools.qmd
+++ b/2+Portfolio+tools.qmd
@@ -19,7 +19,7 @@ One of this week's tasks was to create a slide presentation about remote sensing
 
 
 ```{r embed-xaringan, echo=FALSE}
-xaringanExtra::embed_xaringan(url = "https://github.com/Murphy829/WeekSlides/blob/main/index.html", ratio = "4:3")
+xaringanExtra::embed_xaringan(url = "https://murphy829.github.io/WeekSlides/#1", ratio = "4:3")
 ```
 
 ## Reflection
