--- a/5+Google+Earth+Engine.qmd
+++ b/5+Google+Earth+Engine.qmd
@@ -1,5 +1,21 @@
 ---
 title: "Google Earth Engine"
-author: "Yinhao Zhan"
-editor: visual
+
+#editor: visual
 ---
+
+[🛡️Lecture link](https://andrewmaclachlan.github.io/CASA0023-lecture-5/#1)<br/> [⚔️Practical link](https://andrewmaclachlan.github.io/CASA0023/5_GEE_I.html)<br/>
+
+<img src="https://raw.githubusercontent.com/Murphy829/RSETEST/cfad0da659f496bf719127057fe096a910dbfa5b/imgs/mindmaps/5%2BGoogle%2BEarth%2BEngine.svg" width="700"/><br/> A mindmap for this chapter, marking orange is the part that works best for me.
+
+## Summary
+
+This week
+
+## Application
+
+XXX
+
+## Reflection
+
+XXX
