--- a/3+Remote+sensing+data.qmd
+++ b/3+Remote+sensing+data.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Remote sensing data"
 
-editor: visual
+#editor: visual
 ---
 
 
@@ -14,7 +14,10 @@ editor: visual
 
 ## Summary
 
-This week 
+### Corrections
+
+
+### Enhancement
 
 ## Application
 
