--- a/4+Policy+applications.qmd
+++ b/4+Policy+applications.qmd
@@ -1,5 +1,21 @@
 ---
 title: "Policy applications"
-author: "Yinhao Zhan"
+
 editor: visual
 ---
+
+[🛡Lecture link](https://andrewmaclachlan.github.io/CASA0023-lecture-4/#1)<br/> [⚔️Practical link](https://andrewmaclachlan.github.io/CASA0023/4_policy.html)<br/>
+
+<img src="https://raw.githubusercontent.com/Murphy829/RSETEST/cfad0da659f496bf719127057fe096a910dbfa5b/imgs/mindmaps/4%2BPolicy%2Bapplications.svg" width="700"/><br/> A mindmap for this chapter, marking orange is the part that works best for me.
+
+## Summary
+
+This week
+
+## Application
+
+XXX
+
+## Reflection
+
+XXX
