--- a/6+Classification+I.qmd
+++ b/6+Classification+I.qmd
@@ -1,5 +1,21 @@
 ---
 title: "Classification I"
-author: "Yinhao Zhan"
+
 editor: visual
 ---
+
+[🛡️Lecture link](https://andrewmaclachlan.github.io/CASA0023-lecture-6/#1)<br/> [⚔️Practical link](https://andrewmaclachlan.github.io/CASA0023/6_classification_I.html)<br/>
+
+<img src="https://raw.githubusercontent.com/Murphy829/RSETEST/cfad0da659f496bf719127057fe096a910dbfa5b/imgs/mindmaps/6%2BClassification%2BI.svg" width="700"/><br/> A mindmap for this chapter, marking orange is the part that works best for me.
+
+## Summary
+
+This week
+
+## Application
+
+XXX
+
+## Reflection
+
+XXX
