--- a/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
+++ b/9+Synthetic+Aperture+Radar+(SAR)+data.qmd
@@ -1,5 +1,23 @@
 ---
 title: "Synthetic Aperture Radar (SAR) data"
-author: "Yinhao Zhan"
-editor: visual
+
+#editor: visual
 ---
+
+[🛡Lecture link](https://andrewmaclachlan.github.io/CASA0023-lecture-9/#1)<br/> 
+⚔️Practical link (No practical this week)<br/>
+
+
+<img src="https://raw.githubusercontent.com/Murphy829/RSETEST/cfad0da659f496bf719127057fe096a910dbfa5b/imgs/mindmaps/9%2BSynthetic%2BAperture%2BRadar%2B(SAR)%2Bdata.svg" width="700"/><br/> A mindmap for this chapter, marking orange is the part that works best for me.
+
+## Summary
+
+This week
+
+## Application
+
+XXX
+
+## Reflection
+
+XXX
