--- a/5+Google+Earth+Engine.qmd
+++ b/5+Google+Earth+Engine.qmd
@@ -18,6 +18,7 @@ If remote sensing technology has made it possible to analyse the Earth, then the
 
 Here are some useful tutorials resources for beginners.You can also find more advanced tutorials recommended in the  [⚔️Practical link](https://andrewmaclachlan.github.io/CASA0023/5_GEE_I.html).<br/>
 
+- [GEE Guides](https://developers.google.com/earth-engine/guides)<br/>
 - [Welcome to Google Earth Engine](https://developers.google.com/earth-engine)<br/>
 - [Gee-turtorials](https://google-earth-engine.com/)<br/>
 - [Cloud-Based Remote Sensing with Google Earth Engine](https://docs.google.com/document/d/1MIPIFMJakC6eNGOhlkXLcwjUKFyY6QJLHElzBCOfyn4/edit#heading=h.mm0ckpr9chy2)
